# small-auth-app-lite

./: .gitignore  README.md
docs/: architecture.md
sm-auth-app-lite/: pyproject.toml  r.txt
sm-auth-app-lite/sm_auth_app_lite/: __init__.py  app.py  run.py
sm-auth-app-lite/sm_auth_app_lite/blueprints/gmail/: __init__.py  routes.py
sm-auth-app-lite/sm_auth_app_lite/blueprints/google_auth/: auth.py  routes.py
sm-auth-app-lite/sm_auth_app_lite/blueprints/mailbox/: __init__.py  fetch_by_token.py  query.py  routes.py  time_utils.py  utils.py
sm-auth-app-lite/sm_auth_app_lite/blueprints/mailbox/services/: process_encoded.py  process_raw.py
sm-auth-app-lite/sm_auth_app_lite/common/: __init__.py  db_handler.py  env.sample.json  models.py  utils.py
sm-auth-app-lite/sm_auth_app_lite/gmail_service/: __init__.py  auth_utils.py  client.py  constants.py  exceptions.py  service.py
sm-auth-app-lite/sm_auth_app_lite/gmail_service/models/: credentials.py  labels.py  message.py  query.py
sm-auth-app-lite/sm_auth_app_lite/gmail_service/processors/: __init__.py  base.py  html.py  llm_processor.py  regex.py  text.py
sm-auth-app-lite/sm_auth_app_lite/gmail_service/services/: clustering_service.py  openai_service.py
sm-auth-app-lite/sm_auth_app_lite/templates/gmail/: dashboard.html
