[tool.poetry]
name = "sm-auth-app-lite"
version = "0.1.0"
description = ""
authors = ["anubhav <imanubhav18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.2.3"
flask-cors = "3.0.10"
google-api-python-client = "2.58.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
